Filled out location page
Still need to add functionality to buttons and searchbar. I just put an image of the map

--- a/Commerce_Spring/src/main/resources/application.yml
+++ b/Commerce_Spring/src/main/resources/application.yml
@@ -14,10 +14,11 @@ spring:
 
     datasource:
       driver-class-name: org.h2.Driver
-      url: jdbc:h2:file:~test
+      url: jdbc:h2:file:~/test
       username: sa
       password:
 
     jpa:
       hibernate:
+        generate-ddl: true
         ddl-auto: create
